2022-01-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix minor memory leaks.

5.1.7

2022-01-16  Arjen de Korte <build+github@de-korte.org>

	* Fix linking failure on some Linux distributions.

5.1.6

2022-01-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix linking failure on some Linux distributions.

5.1.5

2022-01-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix minor memory leaks. If valgrind is installed, "make check" will
	run it to check for memory leaks.

	* Convert to PCRE2.

2022-01-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* libcouriertls: use ALARM to kill couriertls if the server process
	terminates but openssl hangs trying to shut down the socket.

5.1.4

2021-08-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* imapd.c (bye): Just call exit(), we may be in an inconstent state.

2021-06-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3login: use unbuffered reads, handle our own buffering.

2021-05-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Minor code tweaks, make it compleable with -Wall -Werror.

5.1.3

2021-04-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3d: pro-forma POP3 LANG extension.

2021-03-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3d-ssl.dist.in (TLS_STARTTLS_PROTOCOL): Remove duplicate entry
	in the pop3d-ssl configuration file.

5.1.2

2021-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* make*: Individual files that did not end in a newline were
	not handled correctly.

	* imap: adjust error message.

5.1.1

2021-03-20  Arjen de Korte <build+github@de-korte.org>

	* Fix TLS_CACHEfile naming mismatch.

5.1.0

2021-02-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement support for the TLS ALPN extension.

2021-02-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Replace FAM/Gamin with inotify.

	* Install the maildirwatch tool.

	* Remove the IMAP_ENHANCEDIDLE setting from the imapd configuration
	file.

	* Update RPM spec file.

5.0.13

2021-03-01  Sam Varshavchik  <mrsam@courier-mta.com>