@@ -1,3 +1,8 @@
+2022-01-22  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fixes to Makefile to workaround test suite failures related to
+	permission checking when make check runs as root.
+
 2022-01-17  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Fix minor memory leaks.
